pilot/pkg/security/authz/builder/testdata/v1beta1-not-override-v1alpha1-in.yaml
apiVersion: security.istio.io/v1beta1
kind: AuthorizationPolicy
metadata:
  name: httpbin-1
  namespace: foo
spec:
  selector:
    matchLabels:
      app: httpbin
      version: v1
      foo: bar
  rules:
    - to:
        - operation:
            methods: ["GET"]
---
apiVersion: "rbac.istio.io/v1alpha1"
kind: ClusterRbacConfig
metadata:
  name: default
  namespace: istio-system
spec:
  mode: 'ON'
---
apiVersion: "rbac.istio.io/v1alpha1"
kind: ServiceRole
metadata:
  name: httpbin
  namespace: foo
spec:
  rules:
    - services: ["*"]
      paths: ["/v1alpha1"]
---
apiVersion: "rbac.istio.io/v1alpha1"
kind: ServiceRoleBinding
metadata:
  name: httpbin-binding
  namespace: foo
spec:
  subjects:
    - user: "*"
  roleRef:
    kind: ServiceRole
    name: "httpbin"
---
