pilot/pkg/security/authz/builder/testdata/v1beta1-not-override-v1alpha1-out.yaml
rules:
  policies:
    httpbin:
      permissions:
        - andRules:
            rules:
              - orRules:
                  rules:
                    - header:
                        exactMatch: /v1alpha1
                        name: :path
      principals:
        - andIds:
            ids:
              - any: true
